miniextendr-macros/tests/ui/impl_unknown_class_system.stderr
error: unknown class system: flutter
 --> tests/ui/impl_unknown_class_system.rs:7:15
  |
7 | #[miniextendr(flutter)]
  |               ^^^^^^^
